java 1.5, and a (temporary?) fix for terrible issues in didactor with mmbob
git-svn-id: https://scm.mmbase.org/mmbase/trunk@22219 91430c5f-d668-0410-9e7d-dd663366dcfd